add hpa api
