# docs/openapi/pipeline.yaml
@@ -37,6 +37,8 @@ tags:
     description: Cloud config related functions
   - name: storage
     description: Storage related functions
+  - name: hpa
+    description: Horizontal Pod Autoscaling related functions
 
 paths:
 
@@ -1729,15 +1731,15 @@ paths:
                 schema:
                   $ref: '#/components/schemas/BaseError_500'
 
-  '/api/v1/orgs/{orgId}/clusters/{id}/deployments/{name}/autoscaling':
-      put:
+  '/api/v1/orgs/{orgId}/clusters/{id}/deployments/{name}/resources':
+      get:
         security:
           - bearerAuth: []
         tags:
           - deployment
-        summary: Create / Update Deployment Scaling
-        operationId: DeploymentAutoscalingPut
-        description: Create / update scaling info for a Helm deployment
+        summary: Get deployment K8s resources
+        operationId: GetDeploymentResource
+        description: Retrieves the K8s resources of a deployment
         parameters:
           - name: orgId
             in: path
@@ -1757,6 +1759,60 @@ paths:
             description: Deployment name
             schema:
               type: string
+          - name: resourceTypes
+            in: query
+            required: false
+            description: K8s reource type
+            schema:
+              type: string
+        responses:
+          '200':
+            description: "Deployment resources"
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/GetDeploymentResourcesResponse'
+          '400':
+            description: "Bad request"
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/BaseError_400'
+          '401':
+            description: "Unauthorized"
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Unauthorized'
+          '500':
+            description: Internal server error
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/BaseError_500'
+
+  '/api/v1/orgs/{orgId}/clusters/{id}/hpa':
+      put:
+        security:
+          - bearerAuth: []
+        tags:
+          - hpa
+        summary: Create / Update Deployment Scaling
+        operationId: DeploymentAutoscalingPut
+        description: Create / update scaling info for a Helm deployment
+        parameters:
+          - name: orgId
+            in: path
+            required: true
+            description: Organization identification
+            schema:
+              type: integer
+          - name: id
+            in: path
+            required: true
+            description: Selected cluster identification (number)
+            schema:
+              type: integer
         requestBody:
           required: true
           content:
@@ -1789,7 +1845,7 @@ paths:
         security:
           - bearerAuth: []
         tags:
-          - deployment
+          - hpa
         summary: Get Deployment Scaling Info
         operationId: DeploymentAutoscalingGet
         description: Get scaling info for a Helm deployment
@@ -1806,10 +1862,10 @@ paths:
             description: Selected cluster identification (number)
             schema:
               type: integer
-          - name: name
-            in: path
+          - name: scaleTarget
+            in: query
             required: true
-            description: Deployment name
+            description: Deployment or StatefulSet name
             schema:
               type: string
         responses:
@@ -4536,6 +4592,18 @@ components:
           type: string
           example: "vigilant-mandrill"
 
+    GetDeploymentResourcesResponse:
+      type: array
+      items:
+        type: object
+        properties:
+          name:
+            example: bumptious-dragon-zeppelin
+            type: string
+          kind:
+            example: Deployment
+            type: string
+
     GetDeploymentResponse:
       type: object
       properties:
@@ -6297,74 +6365,65 @@ components:
     DeploymentScalingRequest:
       title: Create / Update Deployment Scaling Request
       example:
-        deployments:
-          - name: k8sDeploymentName
-            minReplicas: 1
-            maxReplicas: 3
-            cpu:
-              targetAverageUtilization: 70
-            memory:
-              targetAverageValue: 500Mi
-            customMetrics:
-              - name: custom_metric_name
-                type: pod
-                targetAverageValue: 700m
+        name: k8sDeploymentName
+        minReplicas: 1
+        maxReplicas: 3
+        cpu:
+          targetAverageUtilization: 70
+        memory:
+          targetAverageValue: 500Mi
+        customMetrics:
+          custom_metric_name:
+            type: pod
+            targetAverageValue: 700m
       type: object
       properties:
-        deployments:
-          type: array
-          items:
-            type: object
-            properties:
-              name:
-                example: k8sDeploymentName
-                type: string
-              minReplicas:
-                example: 1
-                type: integer
-                format: int32
-              maxReplicas:
-                example: 3
-                type: integer
-                format: int32
-              cpu:
-                $ref: '#/components/schemas/ResourceMetric'
-              memory:
-                $ref: '#/components/schemas/ResourceMetric'
-              customMetrics:
-                example:
-                  - name: custom_metric_name
-                    type: pod
-                    targetAverageValue: 700m
-                type: array
-                items:
-                  $ref: '#/components/schemas/CustomMetric'
-            required:
-              - name
-              - minReplicas
-              - maxReplicas
+        name:
+          example: k8sDeploymentName
+          type: string
+        minReplicas:
+          example: 1
+          type: integer
+          format: int32
+        maxReplicas:
+          example: 3
+          type: integer
+          format: int32
+        cpu:
+          $ref: '#/components/schemas/ResourceMetric'
+        memory:
+          $ref: '#/components/schemas/ResourceMetric'
+        customMetrics:
+          example:
+            custom_metric_name:
+              type: pod
+              targetAverageValue: 700m
+          type: object
+          additionalProperties:
+            $ref: '#/components/schemas/CustomMetric'
       required:
-        - deployments
+        - name
+        - minReplicas
+        - maxReplicas
 
     ResourceMetric:
       title: ResourceMetric
       type: object
       properties:
-        targetAverageUtilization:
-          example: 70
-          type: integer
-          format: int32
         targetAverageValue:
           example: 700m
           type: string
+        targetAverageValueType:
+          type: string
+          enum: [quantity, percentage]
+      required:
+        - targetAverageValue
+        - targetAverageValueType
 
     CustomMetric:
       title: CustomMetric
       type: object
       properties:
-        name:
-          example: custom_metric_name
-          type: string
         type:
           example: pod
           type: string
@@ -6372,78 +6431,79 @@ components:
           example: 700m
           type: string
       required:
-        - name
         - type
         - targetValue
 
     DeploymentScalingResponse:
       title: Get Deployment Scaling Response
       example:
-        deployments:
-          - name: k8sDeploymentName
-            minReplicas: 1
-            maxReplicas: 3
-            cpu:
+        - name: k8sDeploymentName
+          kind: Deployment
+          minReplicas: 1
+          maxReplicas: 3
+          cpu:
+            targetAverageValueType: 'percentage'
+            targetAverageValue: 60
+            currentAverageValue: 0
+          memory:
+            targetAverageValueType: 'quantity'
+            targetAverageValue: '1100Mi'
+            currentAverageUtilization: 'quantity'
+            currentAverageValue: 780013568
+          customMetrics:
+            custom_metric_name:
+              type: pod
               targetAverageValue: 700m
-              currentAverageValue: 100m
-            memory:
-              targetAverageUtilization: 90
-              currentAverageUtilization: 30
-            customMetrics:
-              - name: custom_metric_name
+              currentAverageValue: 300m
+          status:
+            currentReplicas: 1
+            desiredReplicas: 1
+            message: 'ScalingActive = true, lastTransitionTime: 2018-00-22T15:31:16Z, the HPA was able to succesfully calculate a replica count from memory resource'
+      type: array
+      items:
+        type: object
+        properties:
+          name:
+            example: k8sDeploymentName
+            type: string
+          kind:
+            example: Deployment
+            type: string
+          minReplicas:
+            example: 1
+            type: integer
+            format: int32
+          maxReplicas:
+            example: 3
+            type: integer
+            format: int32
+          cpu:
+            $ref: '#/components/schemas/ResourceMetricStatus'
+          memory:
+            $ref: '#/components/schemas/ResourceMetricStatus'
+          customMetrics:
+            example:
+              custom_metric_name:
                 type: pod
                 targetAverageValue: 700m
                 currentAverageValue: 300m
-            status:
-              currentReplicas: 1
-              desiredReplicas: 1
-              message: 'ScalingActive = true, lastTransitionTime: 2018-00-22T15:31:16Z, the HPA was able to succesfully calculate a replica count from memory resource'
-      type: object
-      properties:
-        deployments:
-          type: array
-          items:
             type: object
-            properties:
-              name:
-                example: k8sDeploymentName
-                type: string
-              minReplicas:
-                example: 1
-                type: integer
-                format: int32
-              maxReplicas:
-                example: 3
-                type: integer
-                format: int32
-              cpu:
-                $ref: '#/components/schemas/ResourceMetricStatus'
-              memory:
-                $ref: '#/components/schemas/ResourceMetricStatus'
-              customMetrics:
-                example:
-                  - name: custom_metric_name
-                    type: pod
-                    targetAverageValue: 700m
-                    currentAverageValue: 300m
-                type: array
-                items:
-                  $ref: '#/components/schemas/CustomMetricStatus'
-              status:
-                $ref: '#/components/schemas/DeploymentScaleStatus'
+            additionalProperties:
+              $ref: '#/components/schemas/CustomMetricStatus'
+          status:
+            $ref: '#/components/schemas/DeploymentScaleStatus'
 
     ResourceMetricStatus:
       type: object
       properties:
         allOf:
           $ref: '#/components/schemas/ResourceMetric'
-        currentAverageUtilization:
-          example: 10
-          type: integer
-          format: int32
         currentAverageValue:
           example: 100m
           type: string
+        currentAverageValueType:
+          type: string
+          enum: [quantity, percentage]
 
     CustomMetricStatus:
       type: object
