# main.go
@@ -201,6 +201,9 @@ func main() {
 			orgs.GET("/:orgid/clusters/:id/deployments", api.ListDeployments)
 			orgs.POST("/:orgid/clusters/:id/deployments", api.CreateDeployment)
 			orgs.GET("/:orgid/clusters/:id/deployments/:name", api.GetDeployment)
+			orgs.GET("/:orgid/clusters/:id/deployments/:name/resources", api.GetDeploymentResources)
+			orgs.GET("/:orgid/clusters/:id/hpa", api.GetHpaResource)
+			orgs.PUT("/:orgid/clusters/:id/hpa", api.PutHpaResource)
 			orgs.HEAD("/:orgid/clusters/:id/deployments", api.GetTillerStatus)
 			orgs.DELETE("/:orgid/clusters/:id/deployments/:name", api.DeleteDeployment)
 			orgs.PUT("/:orgid/clusters/:id/deployments/:name", api.UpgradeDeployment)
